# AutoPanorama

./: .gitignore  .gitmodules  .travis.yml  AutoPanorama.pro  AutoPanorama.pro.user.0cafa62  AutoPanorama.pro.user.33e3817  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README  README.md  akazefeaturesfinder.cpp  akazefeaturesfinder.h  appveyor.yml  mainwindow.cpp  mainwindow.h  mainwindow.ui  opencv.cmake  panoramamaker.cpp  panoramamaker.h  ui_mainwindow.h
linux/: autopanorama.desktop  control
res/: application.qrc  autopanorama.rc
scripts/: compile_autopanorama.sh  compile_opencv.sh  linux_build_and_deploy.sh  linux_deploy.sh  win_deploy.iss
src/: .clang-format  akazefeaturesfinder.h  env.h  exposure_compensator.h  innercutfinder.cpp  innercutfinder.h  main.cpp  main_cli.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  panoramamaker.cpp  panoramamaker.h  post_process.cpp  post_process.h  post_process.ui  qfilewidget.cpp  qfilewidget.h  rescalable_label.cpp  rescalable_label.h  types.h  utils.cpp  utils.h  videopreprocessor.cpp  videopreprocessor.h
